--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -120,6 +120,8 @@
 .contact{
   max-width: 1280px;
   margin: 70px auto 0 auto;
+}
+.contact>h1{
   text-align: center;
 }
 hr{
@@ -127,3 +129,4 @@ hr{
   width: 70%;
   
 }
+
