--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -2,11 +2,34 @@
   padding: 50px;
 }
 .contact__form{
-  width: 700px;
+  min-width: 780px;
   margin: auto;
   display: grid;
-  grid-template-columns: auto auto;
+  grid-template-columns: 50% 50%;
+  gap: 15px;
 }
 .form__Div{
   padding: 50px;
+  border-radius: 15px;
 }
+.two__column{
+  grid-column:1/3;
+  width: 100%;
+}
+.two__column>textarea{
+  width: 100%;
+  border-radius: 5px;
+  border:#DADADA solid 2px;
+}
+input{
+  width: 100%;
+  height: 50px;
+  border-radius: 5px;
+  border:#DADADA solid 2px;
+}
+/* .contact__form>div>p{
+  margin: 0;
+} */
+/* .contact__form:nth-child(-n + 2){
+
+} */
