--- a/src/components/ProjectCard.css
+++ b/src/components/ProjectCard.css
@@ -14,3 +14,9 @@
     text-decoration: none;
     color: #3C3E41;
 }
+@media only screen and (max-width: 600px){
+    .projectCard{
+        padding: 5%;
+        width: 300px;
+    }
+}
